Menu spacing fix

--- a/src/components/HEADER/HeaderContainer.css
+++ b/src/components/HEADER/HeaderContainer.css
@@ -1,6 +1,3 @@
-.header-container {
-}
-
 .menu-container {
   position: relative;
   display: grid;
@@ -9,7 +6,7 @@
   border: 3px solid var(--clr-secondary);
   border-radius: 0 0 var(--br-size) var(--br-size);
   opacity: 0;
-  transition: grid-template-rows 0.4s ease-in-out;
+  transition: grid-template-rows 0.3s ease-in-out;
 }
 .menu-container.open {
   grid-template-rows: 1fr;
@@ -23,10 +20,7 @@
   border: none;
   width: 333px;
   opacity: 0;
-  /* padding-bottom: 0.5rem;
-  padding-top: 0.5rem; */
-  transition: transform 0.3s ease-in-out, grid-template-rows 0.4s ease-out;
-  /* transform: translateY(-100%); Initial position off-screen */
+  transition: transform 0.3s ease-in-out, grid-template-rows 0.3s ease-out;
 }
 .menu > ul {
   display: none;
@@ -54,17 +48,14 @@
 .menu.open {
   grid-template-rows: 1fr;
   opacity: 1;
-  height: min-content;
   margin-bottom: var(--size-850);
-  /* transform: translateY(0); Slide the menu into view */
 }
 .menu.open > ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  height: 100%;
+  gap: 1.5rem;
   width: 90%;
-  margin-top: var(--size-300);
+  margin-top: var(--size-500);
 }
 
 .menu-footer {
@@ -83,8 +74,6 @@
   height: var(--size-700);
   transition: background-color 0.5s ease;
   z-index: 9980;
-}
-.menu.open > .menu-footer {
 }
 
 /*----------------------*/
